rbx_binary/src/tests/snapshots/rbx_binary__tests__util__funny-numbervalue__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed

---
- referent: referent-0
  name: Value
  class: NumberValue
  properties:
    AttributesSerialize:
      BinaryString: ""
    Tags:
      BinaryString: ""
    Value:
      Float64: 1.23456
  children: []

